// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled extract babel 6 autoLabel object styles 1`] = `
"
const Profile = () => {
  const H1 = /*#__PURE__*/styled('h1', {
    target: 'e8nbyc50',
    label: 'H1'
  })({
    borderRadius: '50%',
    transition: 'transform 400ms ease-in-out',
    boxSizing: 'border-box',
    display: 'flex',
    ':hover': {
      transform: 'scale(1.2)'
    }
  });
};"
`;

exports[`styled extract babel 6 autoLabel string styles 1`] = `
"require('./emotion.emotion.css');

const Profile = () => {
  const ProfileH1 = styled('h1', {
    e: 'css-kmz3n4',
    target: 'e8nbyc50'
  })();

  return <H1>Hello</H1>;
};


emotion.emotion.css
.css-kmz3n4{color:blue;}"
`;

exports[`styled extract babel 6 basic 1`] = `
"const H1 = /*#__PURE__*/styled('h1', {
  target: 'e8nbyc50'
})('font-size:', fontSize + 'px', ';');"
`;

exports[`styled extract babel 6 component selector 1`] = `
"require('./emotion.emotion.css');

const Child = styled('div', {
  e: 'css-1vhj9jp',
  target: 'e8nbyc50'
})();

const SecondChild = Child.withComponent('span', {
  target: 'e8nbyc51'
});

const Parent = /*#__PURE__*/styled('div', {
  target: 'e8nbyc52'
})(Child, '{color:blue;}', SecondChild, '{color:pink;}');


emotion.emotion.css
.css-1vhj9jp{color:red;}"
`;

exports[`styled extract babel 6 composition based on props 1`] = `
"require('./emotion.emotion.css');

const cls1 = 'css-cls1-1ltut9y';
const H1 = /*#__PURE__*/styled('h1', {
  target: 'e8nbyc50'
})(props => {
  return props.a ? cssA : cssB;
}, ';font-size:', fontSize + 'px', ';height:20px;transform:translateX(', props => props.translateX, ');');


emotion.emotion.css
.css-cls1-1ltut9y{width:20px;}"
`;

exports[`styled extract babel 6 config rename 1`] = `
"require(\\"./emotion.emotion.css\\");

what(\\"h1\\", {
  e: \\"css-14ksm7b\\",
  target: \\"e8nbyc50\\"
})();


emotion.emotion.css
.css-14ksm7b{color:blue;}"
`;

exports[`styled extract babel 6 dynamic fns 1`] = `
"const Avatar = /*#__PURE__*/styled('img', {
  target: 'e8nbyc50'
})('width:96px;height:96px;border-radius:', props => props.theme.borderRadius, ';border:1px solid ', props => props.theme.borderColor, ';');"
`;

exports[`styled extract babel 6 function call 1`] = `
"/*#__PURE__*/styled(MyComponent, {
  target: 'e8nbyc50'
})('font-size:', fontSize + 'px', ';');"
`;

exports[`styled extract babel 6 hash generation no file system 1`] = `
"require(\\"./emotion.emotion.css\\");

styled(\\"h1\\", {
  e: \\"css-14ksm7b\\",
  target: \\"e8nbyc50\\"
})();


emotion.emotion.css
.css-14ksm7b{color:blue;}"
`;

exports[`styled extract babel 6 hoisting 1`] = `
"var _ref = {
  borderRadius: '50%',
  transition: 'transform 400ms ease-in-out',
  boxSizing: 'border-box',
  display: 'flex',
  ':hover': {
    transform: 'scale(1.2)'
  }
};
var _ref2 = [{ color: 'blue' }];

const Profile = () => {
  const H1 = /*#__PURE__*/styled('h1', {
    target: 'e8nbyc50'
  })(_ref, props => ({
    display: props.display
  }), _ref2);
};"
`;

exports[`styled extract babel 6 interpolation in different places 1`] = `
"
const H1 = /*#__PURE__*/styled('h1', {
  target: 'e8nbyc50'
})('font-size:', fontSize + 'px', ';height:20px;transform:translateX(', props => props.translateX, ');height1:', something, 'wow;width:w', something, 'ow;transform:translateX(', props => props.translateX, ') translateY(', props => props.translateX, ');transform1:translateX(', props => props.translateX, ') translateY(', props => props.translateX, ');transform2:translateX(', props => props.translateX, ') ', props => props.translateX, ';');"
`;

exports[`styled extract babel 6 media query 1`] = `
"require(\\"./emotion.emotion.css\\");

const H1 = styled(\\"h1\\", {
  e: \\"css-6skbg5\\",
  target: \\"e8nbyc50\\"
})();


emotion.emotion.css
@media print{.css-6skbg5{font-size:10pt;}}@media screen{.css-6skbg5 .child-selector{font-size:13px;}}@media screen,print{.css-6skbg5:hover + .css-6skbg5{line-height:1.2;}}@media only screen and (min-device-width:320px) and (max-device-width:480px) and (-webkit-min-device-pixel-ratio:2){.css-6skbg5 .child-selector{line-height:1.4;}}"
`;

exports[`styled extract babel 6 more than 10 dynamic values 1`] = `
"const H1 = /*#__PURE__*/styled('h1', {
    target: 'e8nbyc50'
})('text-decoration:', 'underline', ';border-right:solid blue ', 54, 'px;background:', 'white', ';color:', 'black', ';display:', 'block', ';border-radius:', '3px', ';padding:', '25px', ';width:', '500px', ';z-index:', 100, ';font-size:', '18px', ';text-align:', 'center', ';border-left:', p => p.theme.blue, ';');"
`;

exports[`styled extract babel 6 nested 1`] = `
"const H1 = /*#__PURE__*/styled('h1', {
  target: 'e8nbyc50'
})('font-size:', fontSize + 'px', ';& div{color:blue;& span{color:red}}');"
`;

exports[`styled extract babel 6 no dynamic 1`] = `
"require(\\"./emotion.emotion.css\\");

styled(\\"h1\\", {
  e: \\"css-14ksm7b\\",
  target: \\"e8nbyc50\\"
})();


emotion.emotion.css
.css-14ksm7b{color:blue;}"
`;

exports[`styled extract babel 6 no use 1`] = `
"require(\\"./emotion.emotion.css\\");

styled(\\"h1\\", {
  e: \\"css-0\\",
  target: \\"e8nbyc50\\"
})();


emotion.emotion.css
"
`;

exports[`styled extract babel 6 objects based on props 1`] = `
"
const H1 = /*#__PURE__*/styled('h1', {
  target: 'e8nbyc50'
})({ padding: 10 }, props => ({
  display: props.display
}));"
`;

exports[`styled extract babel 6 objects fn call 1`] = `
"
const H1 = /*#__PURE__*/styled('h1', {
  target: 'e8nbyc50'
})({
  display: 'flex'
});"
`;

exports[`styled extract babel 6 objects prefixed 1`] = `
"
const H1 = /*#__PURE__*/styled('h1', {
    target: 'e8nbyc50'
})({
    borderRadius: '50%',
    transition: 'transform 400ms ease-in-out',
    boxSizing: 'border-box',
    display: 'flex',
    ':hover': {
        transform: 'scale(1.2)'
    }
}, props => {
    padding: props.padding;
});"
`;

exports[`styled extract babel 6 random expressions 1`] = `
"require(\\"./emotion.emotion.css\\");

const a = () => \\"css-a-1cvrkk1\\";
/*#__PURE__*/styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})(\\"margin:12px 48px;\\", \\"css-143zpy6\\", \\";color:#ffffff;& .profile{\\", props => props.prop && a(), \\"}\\", { backgroundColor: \\"hotpink\\" }, \\";\\");


emotion.emotion.css
.css-a-1cvrkk1{font-size:1rem;}
.css-143zpy6{font-size:32px;}"
`;

exports[`styled extract babel 6 shorthand property 1`] = `
"const H1 = /*#__PURE__*/styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})({ fontSize });"
`;

exports[`styled extract babel 6 styled objects prefixed 1`] = `
"
const H1 = /*#__PURE__*/styled('h1', {
  target: 'e8nbyc50'
})({
  borderRadius: '50%',
  transition: 'transform 400ms ease-in-out',
  boxSizing: 'border-box',
  display: 'flex',
  ':hover': {
    transform: 'scale(1.2)'
  }
}, props => ({
  display: props.display
}));"
`;

exports[`styled extract babel 6 styled. objects 1`] = `
"
const H1 = /*#__PURE__*/styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})({ padding: 10 }, props => ({
  display: props.display
}));"
`;

exports[`styled extract babel 6 styled. objects with a multiple spread properties 1`] = `
"
const defaultText = { fontSize: 20 };
const Figure = /*#__PURE__*/styled(\\"figure\\", {
  target: \\"e8nbyc50\\"
})({
  ...defaultText,
  ...defaultFigure
});"
`;

exports[`styled extract babel 6 styled. objects with a multiple spread properties and other keys 1`] = `
"
const defaultText = { fontSize: 20 };
const Figure = /*#__PURE__*/styled('figure', {
  target: 'e8nbyc50'
})({
  ...defaultText,
  fontSize: '20px',
  ...defaultFigure,
  ...defaultText2
});"
`;

exports[`styled extract babel 6 styled. objects with a single spread property 1`] = `
"
const defaultText = { fontSize: 20 };
const Figure = /*#__PURE__*/styled(\\"figure\\", {
  target: \\"e8nbyc50\\"
})({
  ...defaultText
});"
`;

exports[`styled extract babel 6 variable import: no dynamic 1`] = `
"import './emotion.emotion.css';
import what from 'emotion';what('h1', {
  e: 'css-14ksm7b',
  target: 'e8nbyc50'
})();


emotion.emotion.css
.css-14ksm7b{color:blue;}"
`;

exports[`styled extract babel 7 autoLabel object styles 1`] = `
"const Profile = () => {
  const H1 =
  /*#__PURE__*/
  styled(\\"h1\\", {
    target: \\"e8nbyc50\\",
    label: \\"H1\\"
  })({
    borderRadius: '50%',
    transition: 'transform 400ms ease-in-out',
    boxSizing: 'border-box',
    display: 'flex',
    ':hover': {
      transform: 'scale(1.2)'
    }
  });
};"
`;

exports[`styled extract babel 7 autoLabel string styles 1`] = `
"require(\\"./emotion.emotion.css\\");

const Profile = () => {
  const ProfileH1 = styled('h1', {
    e: \\"css-kmz3n4\\",
    target: \\"e8nbyc50\\"
  })();
  return <H1>Hello</H1>;
};


emotion.emotion.css
.css-kmz3n4{color:blue;}"
`;

exports[`styled extract babel 7 basic 1`] = `
"const H1 =
/*#__PURE__*/
styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})(\\"font-size:\\", fontSize + 'px', \\";\\");"
`;

exports[`styled extract babel 7 component selector 1`] = `
"require(\\"./emotion.emotion.css\\");

const Child = styled(\\"div\\", {
  e: \\"css-1vhj9jp\\",
  target: \\"e8nbyc50\\"
})();
const SecondChild = Child.withComponent('span', {
  target: \\"e8nbyc51\\"
});
const Parent =
/*#__PURE__*/
styled(\\"div\\", {
  target: \\"e8nbyc52\\"
})(Child, \\"{color:blue;}\\", SecondChild, \\"{color:pink;}\\");


emotion.emotion.css
.css-1vhj9jp{color:red;}"
`;

exports[`styled extract babel 7 composition based on props 1`] = `
"require(\\"./emotion.emotion.css\\");

const cls1 = \\"css-cls1-1ltut9y\\";
const H1 =
/*#__PURE__*/
styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})(props => {
  return props.a ? cssA : cssB;
}, \\";font-size:\\", fontSize + 'px', \\";height:20px;transform:translateX(\\", props => props.translateX, \\");\\");


emotion.emotion.css
.css-cls1-1ltut9y{width:20px;}"
`;

exports[`styled extract babel 7 config rename 1`] = `
"require(\\"./emotion.emotion.css\\");

what(\\"h1\\", {
  e: \\"css-14ksm7b\\",
  target: \\"e8nbyc50\\"
})();


emotion.emotion.css
.css-14ksm7b{color:blue;}"
`;

exports[`styled extract babel 7 dynamic fns 1`] = `
"const Avatar =
/*#__PURE__*/
styled('img', {
  target: \\"e8nbyc50\\"
})(\\"width:96px;height:96px;border-radius:\\", props => props.theme.borderRadius, \\";border:1px solid \\", props => props.theme.borderColor, \\";\\");"
`;

exports[`styled extract babel 7 function call 1`] = `
"/*#__PURE__*/
styled(MyComponent, {
  target: \\"e8nbyc50\\"
})(\\"font-size:\\", fontSize + 'px', \\";\\");"
`;

exports[`styled extract babel 7 hash generation no file system 1`] = `
"require(\\"./emotion.emotion.css\\");

styled(\\"h1\\", {
  e: \\"css-14ksm7b\\",
  target: \\"e8nbyc50\\"
})();


emotion.emotion.css
.css-14ksm7b{color:blue;}"
`;

exports[`styled extract babel 7 hoisting 1`] = `
"var _ref = {
  borderRadius: '50%',
  transition: 'transform 400ms ease-in-out',
  boxSizing: 'border-box',
  display: 'flex',
  ':hover': {
    transform: 'scale(1.2)'
  }
};
var _ref2 = [{
  color: 'blue'
}];

const Profile = () => {
  const H1 =
  /*#__PURE__*/
  styled(\\"h1\\", {
    target: \\"e8nbyc50\\"
  })(_ref, props => ({
    display: props.display
  }), _ref2);
};"
`;

exports[`styled extract babel 7 interpolation in different places 1`] = `
"const H1 =
/*#__PURE__*/
styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})(\\"font-size:\\", fontSize + 'px', \\";height:20px;transform:translateX(\\", props => props.translateX, \\");height1:\\", something, \\"wow;width:w\\", something, \\"ow;transform:translateX(\\", props => props.translateX, \\") translateY(\\", props => props.translateX, \\");transform1:translateX(\\", props => props.translateX, \\") translateY(\\", props => props.translateX, \\");transform2:translateX(\\", props => props.translateX, \\") \\", props => props.translateX, \\";\\");"
`;

exports[`styled extract babel 7 media query 1`] = `
"require(\\"./emotion.emotion.css\\");

const H1 = styled(\\"h1\\", {
  e: \\"css-6skbg5\\",
  target: \\"e8nbyc50\\"
})();


emotion.emotion.css
@media print{.css-6skbg5{font-size:10pt;}}@media screen{.css-6skbg5 .child-selector{font-size:13px;}}@media screen,print{.css-6skbg5:hover + .css-6skbg5{line-height:1.2;}}@media only screen and (min-device-width:320px) and (max-device-width:480px) and (-webkit-min-device-pixel-ratio:2){.css-6skbg5 .child-selector{line-height:1.4;}}"
`;

exports[`styled extract babel 7 more than 10 dynamic values 1`] = `
"const H1 =
/*#__PURE__*/
styled('h1', {
  target: \\"e8nbyc50\\"
})(\\"text-decoration:\\", 'underline', \\";border-right:solid blue \\", 54, \\"px;background:\\", 'white', \\";color:\\", 'black', \\";display:\\", 'block', \\";border-radius:\\", '3px', \\";padding:\\", '25px', \\";width:\\", '500px', \\";z-index:\\", 100, \\";font-size:\\", '18px', \\";text-align:\\", 'center', \\";border-left:\\", p => p.theme.blue, \\";\\");"
`;

exports[`styled extract babel 7 nested 1`] = `
"const H1 =
/*#__PURE__*/
styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})(\\"font-size:\\", fontSize + 'px', \\";& div{color:blue;& span{color:red}}\\");"
`;

exports[`styled extract babel 7 no dynamic 1`] = `
"require(\\"./emotion.emotion.css\\");

styled(\\"h1\\", {
  e: \\"css-14ksm7b\\",
  target: \\"e8nbyc50\\"
})();


emotion.emotion.css
.css-14ksm7b{color:blue;}"
`;

exports[`styled extract babel 7 no use 1`] = `
"require(\\"./emotion.emotion.css\\");

styled(\\"h1\\", {
  e: \\"css-0\\",
  target: \\"e8nbyc50\\"
})();


emotion.emotion.css
"
`;

exports[`styled extract babel 7 objects based on props 1`] = `
"const H1 =
/*#__PURE__*/
styled('h1', {
  target: \\"e8nbyc50\\"
})({
  padding: 10
}, props => ({
  display: props.display
}));"
`;

exports[`styled extract babel 7 objects fn call 1`] = `
"const H1 =
/*#__PURE__*/
styled('h1', {
  target: \\"e8nbyc50\\"
})({
  display: 'flex'
});"
`;

exports[`styled extract babel 7 objects prefixed 1`] = `
"const H1 =
/*#__PURE__*/
styled('h1', {
  target: \\"e8nbyc50\\"
})({
  borderRadius: '50%',
  transition: 'transform 400ms ease-in-out',
  boxSizing: 'border-box',
  display: 'flex',
  ':hover': {
    transform: 'scale(1.2)'
  }
}, props => {
  padding: props.padding;
});"
`;

exports[`styled extract babel 7 random expressions 1`] = `
"require(\\"./emotion.emotion.css\\");

const a = () => \\"css-a-1cvrkk1\\";

/*#__PURE__*/
styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})(\\"margin:12px 48px;\\", \\"css-143zpy6\\", \\";color:#ffffff;& .profile{\\", props => props.prop && a(), \\"}\\", {
  backgroundColor: \\"hotpink\\"
}, \\";\\");


emotion.emotion.css
.css-a-1cvrkk1{font-size:1rem;}
.css-143zpy6{font-size:32px;}"
`;

exports[`styled extract babel 7 shorthand property 1`] = `
"const H1 =
/*#__PURE__*/
styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})({
  fontSize
});"
`;

exports[`styled extract babel 7 styled objects prefixed 1`] = `
"const H1 =
/*#__PURE__*/
styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})({
  borderRadius: '50%',
  transition: 'transform 400ms ease-in-out',
  boxSizing: 'border-box',
  display: 'flex',
  ':hover': {
    transform: 'scale(1.2)'
  }
}, props => ({
  display: props.display
}));"
`;

exports[`styled extract babel 7 styled. objects 1`] = `
"const H1 =
/*#__PURE__*/
styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})({
  padding: 10
}, props => ({
  display: props.display
}));"
`;

exports[`styled extract babel 7 styled. objects with a multiple spread properties 1`] = `
"const defaultText = {
  fontSize: 20
};
const Figure =
/*#__PURE__*/
styled(\\"figure\\", {
  target: \\"e8nbyc50\\"
})({ ...defaultText,
  ...defaultFigure
});"
`;

exports[`styled extract babel 7 styled. objects with a multiple spread properties and other keys 1`] = `
"const defaultText = {
  fontSize: 20
};
const Figure =
/*#__PURE__*/
styled(\\"figure\\", {
  target: \\"e8nbyc50\\"
})({ ...defaultText,
  fontSize: '20px',
  ...defaultFigure,
  ...defaultText2
});"
`;

exports[`styled extract babel 7 styled. objects with a single spread property 1`] = `
"const defaultText = {
  fontSize: 20
};
const Figure =
/*#__PURE__*/
styled(\\"figure\\", {
  target: \\"e8nbyc50\\"
})({ ...defaultText
});"
`;

exports[`styled extract babel 7 variable import: no dynamic 1`] = `
"import \\"./emotion.emotion.css\\";
import what from 'emotion';
what(\\"h1\\", {
  e: \\"css-14ksm7b\\",
  target: \\"e8nbyc50\\"
})();


emotion.emotion.css
.css-14ksm7b{color:blue;}"
`;

exports[`styled inline babel 6 autoLabel object styles 1`] = `
"
const Profile = () => {
  const H1 = /*#__PURE__*/styled('h1', {
    target: 'e8nbyc50',
    label: 'H1'
  })({
    borderRadius: '50%',
    transition: 'transform 400ms ease-in-out',
    boxSizing: 'border-box',
    display: 'flex',
    ':hover': {
      transform: 'scale(1.2)'
    }
  });
};"
`;

exports[`styled inline babel 6 autoLabel string styles 1`] = `
"
const Profile = () => {
  const ProfileH1 = /*#__PURE__*/styled('h1', {
    label: 'ProfileH1',
    target: 'e8nbyc50'
  })('color:blue;');

  return <H1>Hello</H1>;
};"
`;

exports[`styled inline babel 6 basic 1`] = `
"const H1 = /*#__PURE__*/styled('h1', {
  target: 'e8nbyc50'
})('font-size:', fontSize + 'px', ';');"
`;

exports[`styled inline babel 6 component selector 1`] = `
"
const Child = /*#__PURE__*/styled('div', {
  target: 'e8nbyc50'
})('color:red;');

const SecondChild = Child.withComponent('span', {
  target: 'e8nbyc51'
});

const Parent = /*#__PURE__*/styled('div', {
  target: 'e8nbyc52'
})(Child, '{color:blue;}', SecondChild, '{color:pink;}');"
`;

exports[`styled inline babel 6 composition based on props 1`] = `
"const cls1 = /*#__PURE__*/css('width:20px;');
const H1 = /*#__PURE__*/styled('h1', {
  target: 'e8nbyc50'
})(props => {
  return props.a ? cssA : cssB;
}, ';font-size:', fontSize + 'px', ';height:20px;transform:translateX(', props => props.translateX, ');');"
`;

exports[`styled inline babel 6 config rename 1`] = `
"/*#__PURE__*/what(\\"h1\\", {
  target: \\"e8nbyc50\\"
})(\\"color:blue;\\");"
`;

exports[`styled inline babel 6 dynamic fns 1`] = `
"const Avatar = /*#__PURE__*/styled('img', {
  target: 'e8nbyc50'
})('width:96px;height:96px;border-radius:', props => props.theme.borderRadius, ';border:1px solid ', props => props.theme.borderColor, ';');"
`;

exports[`styled inline babel 6 function call 1`] = `
"/*#__PURE__*/styled(MyComponent, {
  target: 'e8nbyc50'
})('font-size:', fontSize + 'px', ';');"
`;

exports[`styled inline babel 6 hash generation no file system 1`] = `
"/*#__PURE__*/styled(\\"h1\\", {
  target: \\"e1kqw4hu0\\"
})(\\"color:blue;\\");"
`;

exports[`styled inline babel 6 hoisting 1`] = `
"var _ref = {
  borderRadius: '50%',
  transition: 'transform 400ms ease-in-out',
  boxSizing: 'border-box',
  display: 'flex',
  ':hover': {
    transform: 'scale(1.2)'
  }
};
var _ref2 = [{ color: 'blue' }];

const Profile = () => {
  const H1 = /*#__PURE__*/styled('h1', {
    target: 'e8nbyc50'
  })(_ref, props => ({
    display: props.display
  }), _ref2);
};"
`;

exports[`styled inline babel 6 interpolation in different places 1`] = `
"
const H1 = /*#__PURE__*/styled('h1', {
  target: 'e8nbyc50'
})('font-size:', fontSize + 'px', ';height:20px;transform:translateX(', props => props.translateX, ');height1:', something, 'wow;width:w', something, 'ow;transform:translateX(', props => props.translateX, ') translateY(', props => props.translateX, ');transform1:translateX(', props => props.translateX, ') translateY(', props => props.translateX, ');transform2:translateX(', props => props.translateX, ') ', props => props.translateX, ';');"
`;

exports[`styled inline babel 6 media query 1`] = `
"const H1 = /*#__PURE__*/styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})(\\"@media print{font-size:10pt}@media screen{.child-selector{font-size:13px}}@media screen,print{&:hover + &{line-height:1.2}}@media only screen   and (min-device-width:320px)   and (max-device-width:480px)  and (-webkit-min-device-pixel-ratio:2){.child-selector{line-height:1.4}}\\");"
`;

exports[`styled inline babel 6 more than 10 dynamic values 1`] = `
"const H1 = /*#__PURE__*/styled('h1', {
    target: 'e8nbyc50'
})('text-decoration:', 'underline', ';border-right:solid blue ', 54, 'px;background:', 'white', ';color:', 'black', ';display:', 'block', ';border-radius:', '3px', ';padding:', '25px', ';width:', '500px', ';z-index:', 100, ';font-size:', '18px', ';text-align:', 'center', ';border-left:', p => p.theme.blue, ';');"
`;

exports[`styled inline babel 6 nested 1`] = `
"const H1 = /*#__PURE__*/styled('h1', {
  target: 'e8nbyc50'
})('font-size:', fontSize + 'px', ';& div{color:blue;& span{color:red}}');"
`;

exports[`styled inline babel 6 no dynamic 1`] = `
"/*#__PURE__*/styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})(\\"color:blue;\\");"
`;

exports[`styled inline babel 6 no use 1`] = `
"/*#__PURE__*/styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})();"
`;

exports[`styled inline babel 6 objects based on props 1`] = `
"
const H1 = /*#__PURE__*/styled('h1', {
  target: 'e8nbyc50'
})({ padding: 10 }, props => ({
  display: props.display
}));"
`;

exports[`styled inline babel 6 objects fn call 1`] = `
"
const H1 = /*#__PURE__*/styled('h1', {
  target: 'e8nbyc50'
})({
  display: 'flex'
});"
`;

exports[`styled inline babel 6 objects prefixed 1`] = `
"
const H1 = /*#__PURE__*/styled('h1', {
    target: 'e8nbyc50'
})({
    borderRadius: '50%',
    transition: 'transform 400ms ease-in-out',
    boxSizing: 'border-box',
    display: 'flex',
    ':hover': {
        transform: 'scale(1.2)'
    }
}, props => {
    padding: props.padding;
});"
`;

exports[`styled inline babel 6 random expressions 1`] = `
"
const a = () => /*#__PURE__*/css(\\"font-size:1rem\\");
/*#__PURE__*/styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})(\\"margin:12px 48px;\\", /*#__PURE__*/css(\\"font-size:32px\\"), \\";color:#ffffff;& .profile{\\", props => props.prop && a(), \\"}\\", { backgroundColor: \\"hotpink\\" }, \\";\\");"
`;

exports[`styled inline babel 6 shorthand property 1`] = `
"const H1 = /*#__PURE__*/styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})({ fontSize });"
`;

exports[`styled inline babel 6 styled objects prefixed 1`] = `
"
const H1 = /*#__PURE__*/styled('h1', {
  target: 'e8nbyc50'
})({
  borderRadius: '50%',
  transition: 'transform 400ms ease-in-out',
  boxSizing: 'border-box',
  display: 'flex',
  ':hover': {
    transform: 'scale(1.2)'
  }
}, props => ({
  display: props.display
}));"
`;

exports[`styled inline babel 6 styled. objects 1`] = `
"
const H1 = /*#__PURE__*/styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})({ padding: 10 }, props => ({
  display: props.display
}));"
`;

exports[`styled inline babel 6 styled. objects with a multiple spread properties 1`] = `
"
const defaultText = { fontSize: 20 };
const Figure = /*#__PURE__*/styled(\\"figure\\", {
  target: \\"e8nbyc50\\"
})({
  ...defaultText,
  ...defaultFigure
});"
`;

exports[`styled inline babel 6 styled. objects with a multiple spread properties and other keys 1`] = `
"
const defaultText = { fontSize: 20 };
const Figure = /*#__PURE__*/styled('figure', {
  target: 'e8nbyc50'
})({
  ...defaultText,
  fontSize: '20px',
  ...defaultFigure,
  ...defaultText2
});"
`;

exports[`styled inline babel 6 styled. objects with a single spread property 1`] = `
"
const defaultText = { fontSize: 20 };
const Figure = /*#__PURE__*/styled(\\"figure\\", {
  target: \\"e8nbyc50\\"
})({
  ...defaultText
});"
`;

exports[`styled inline babel 6 variable import: no dynamic 1`] = `
"import what from 'emotion'; /*#__PURE__*/what('h1', {
  target: 'e8nbyc50'
})('color:blue;');"
`;

exports[`styled inline babel 7 autoLabel object styles 1`] = `
"const Profile = () => {
  const H1 =
  /*#__PURE__*/
  styled(\\"h1\\", {
    target: \\"e8nbyc50\\",
    label: \\"H1\\"
  })({
    borderRadius: '50%',
    transition: 'transform 400ms ease-in-out',
    boxSizing: 'border-box',
    display: 'flex',
    ':hover': {
      transform: 'scale(1.2)'
    }
  });
};"
`;

exports[`styled inline babel 7 autoLabel string styles 1`] = `
"const Profile = () => {
  const ProfileH1 =
  /*#__PURE__*/
  styled('h1', {
    label: \\"ProfileH1\\",
    target: \\"e8nbyc50\\"
  })(\\"color:blue;\\");
  return <H1>Hello</H1>;
};"
`;

exports[`styled inline babel 7 basic 1`] = `
"const H1 =
/*#__PURE__*/
styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})(\\"font-size:\\", fontSize + 'px', \\";\\");"
`;

exports[`styled inline babel 7 component selector 1`] = `
"const Child =
/*#__PURE__*/
styled(\\"div\\", {
  target: \\"e8nbyc50\\"
})(\\"color:red;\\");
const SecondChild = Child.withComponent('span', {
  target: \\"e8nbyc51\\"
});
const Parent =
/*#__PURE__*/
styled(\\"div\\", {
  target: \\"e8nbyc52\\"
})(Child, \\"{color:blue;}\\", SecondChild, \\"{color:pink;}\\");"
`;

exports[`styled inline babel 7 composition based on props 1`] = `
"const cls1 =
/*#__PURE__*/
css(\\"width:20px;\\");
const H1 =
/*#__PURE__*/
styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})(props => {
  return props.a ? cssA : cssB;
}, \\";font-size:\\", fontSize + 'px', \\";height:20px;transform:translateX(\\", props => props.translateX, \\");\\");"
`;

exports[`styled inline babel 7 config rename 1`] = `
"/*#__PURE__*/
what(\\"h1\\", {
  target: \\"e8nbyc50\\"
})(\\"color:blue;\\");"
`;

exports[`styled inline babel 7 dynamic fns 1`] = `
"const Avatar =
/*#__PURE__*/
styled('img', {
  target: \\"e8nbyc50\\"
})(\\"width:96px;height:96px;border-radius:\\", props => props.theme.borderRadius, \\";border:1px solid \\", props => props.theme.borderColor, \\";\\");"
`;

exports[`styled inline babel 7 function call 1`] = `
"/*#__PURE__*/
styled(MyComponent, {
  target: \\"e8nbyc50\\"
})(\\"font-size:\\", fontSize + 'px', \\";\\");"
`;

exports[`styled inline babel 7 hash generation no file system 1`] = `
"/*#__PURE__*/
styled(\\"h1\\", {
  target: \\"e1kqw4hu0\\"
})(\\"color:blue;\\");"
`;

exports[`styled inline babel 7 hoisting 1`] = `
"var _ref = {
  borderRadius: '50%',
  transition: 'transform 400ms ease-in-out',
  boxSizing: 'border-box',
  display: 'flex',
  ':hover': {
    transform: 'scale(1.2)'
  }
};
var _ref2 = [{
  color: 'blue'
}];

const Profile = () => {
  const H1 =
  /*#__PURE__*/
  styled(\\"h1\\", {
    target: \\"e8nbyc50\\"
  })(_ref, props => ({
    display: props.display
  }), _ref2);
};"
`;

exports[`styled inline babel 7 interpolation in different places 1`] = `
"const H1 =
/*#__PURE__*/
styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})(\\"font-size:\\", fontSize + 'px', \\";height:20px;transform:translateX(\\", props => props.translateX, \\");height1:\\", something, \\"wow;width:w\\", something, \\"ow;transform:translateX(\\", props => props.translateX, \\") translateY(\\", props => props.translateX, \\");transform1:translateX(\\", props => props.translateX, \\") translateY(\\", props => props.translateX, \\");transform2:translateX(\\", props => props.translateX, \\") \\", props => props.translateX, \\";\\");"
`;

exports[`styled inline babel 7 media query 1`] = `
"const H1 =
/*#__PURE__*/
styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})(\\"@media print{font-size:10pt}@media screen{.child-selector{font-size:13px}}@media screen,print{&:hover + &{line-height:1.2}}@media only screen   and (min-device-width:320px)   and (max-device-width:480px)  and (-webkit-min-device-pixel-ratio:2){.child-selector{line-height:1.4}}\\");"
`;

exports[`styled inline babel 7 more than 10 dynamic values 1`] = `
"const H1 =
/*#__PURE__*/
styled('h1', {
  target: \\"e8nbyc50\\"
})(\\"text-decoration:\\", 'underline', \\";border-right:solid blue \\", 54, \\"px;background:\\", 'white', \\";color:\\", 'black', \\";display:\\", 'block', \\";border-radius:\\", '3px', \\";padding:\\", '25px', \\";width:\\", '500px', \\";z-index:\\", 100, \\";font-size:\\", '18px', \\";text-align:\\", 'center', \\";border-left:\\", p => p.theme.blue, \\";\\");"
`;

exports[`styled inline babel 7 nested 1`] = `
"const H1 =
/*#__PURE__*/
styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})(\\"font-size:\\", fontSize + 'px', \\";& div{color:blue;& span{color:red}}\\");"
`;

exports[`styled inline babel 7 no dynamic 1`] = `
"/*#__PURE__*/
styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})(\\"color:blue;\\");"
`;

exports[`styled inline babel 7 no use 1`] = `
"/*#__PURE__*/
styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})();"
`;

exports[`styled inline babel 7 objects based on props 1`] = `
"const H1 =
/*#__PURE__*/
styled('h1', {
  target: \\"e8nbyc50\\"
})({
  padding: 10
}, props => ({
  display: props.display
}));"
`;

exports[`styled inline babel 7 objects fn call 1`] = `
"const H1 =
/*#__PURE__*/
styled('h1', {
  target: \\"e8nbyc50\\"
})({
  display: 'flex'
});"
`;

exports[`styled inline babel 7 objects prefixed 1`] = `
"const H1 =
/*#__PURE__*/
styled('h1', {
  target: \\"e8nbyc50\\"
})({
  borderRadius: '50%',
  transition: 'transform 400ms ease-in-out',
  boxSizing: 'border-box',
  display: 'flex',
  ':hover': {
    transform: 'scale(1.2)'
  }
}, props => {
  padding: props.padding;
});"
`;

exports[`styled inline babel 7 random expressions 1`] = `
"const a = () =>
/*#__PURE__*/
css(\\"font-size:1rem\\");

/*#__PURE__*/
styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})(\\"margin:12px 48px;\\",
/*#__PURE__*/
css(\\"font-size:32px\\"), \\";color:#ffffff;& .profile{\\", props => props.prop && a(), \\"}\\", {
  backgroundColor: \\"hotpink\\"
}, \\";\\");"
`;

exports[`styled inline babel 7 shorthand property 1`] = `
"const H1 =
/*#__PURE__*/
styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})({
  fontSize
});"
`;

exports[`styled inline babel 7 styled objects prefixed 1`] = `
"const H1 =
/*#__PURE__*/
styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})({
  borderRadius: '50%',
  transition: 'transform 400ms ease-in-out',
  boxSizing: 'border-box',
  display: 'flex',
  ':hover': {
    transform: 'scale(1.2)'
  }
}, props => ({
  display: props.display
}));"
`;

exports[`styled inline babel 7 styled. objects 1`] = `
"const H1 =
/*#__PURE__*/
styled(\\"h1\\", {
  target: \\"e8nbyc50\\"
})({
  padding: 10
}, props => ({
  display: props.display
}));"
`;

exports[`styled inline babel 7 styled. objects with a multiple spread properties 1`] = `
"const defaultText = {
  fontSize: 20
};
const Figure =
/*#__PURE__*/
styled(\\"figure\\", {
  target: \\"e8nbyc50\\"
})({ ...defaultText,
  ...defaultFigure
});"
`;

exports[`styled inline babel 7 styled. objects with a multiple spread properties and other keys 1`] = `
"const defaultText = {
  fontSize: 20
};
const Figure =
/*#__PURE__*/
styled(\\"figure\\", {
  target: \\"e8nbyc50\\"
})({ ...defaultText,
  fontSize: '20px',
  ...defaultFigure,
  ...defaultText2
});"
`;

exports[`styled inline babel 7 styled. objects with a single spread property 1`] = `
"const defaultText = {
  fontSize: 20
};
const Figure =
/*#__PURE__*/
styled(\\"figure\\", {
  target: \\"e8nbyc50\\"
})({ ...defaultText
});"
`;

exports[`styled inline babel 7 variable import: no dynamic 1`] = `
"import what from 'emotion';

/*#__PURE__*/
what(\\"h1\\", {
  target: \\"e8nbyc50\\"
})(\\"color:blue;\\");"
`;
